# ant-matrix

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json
functions/: _middleware.js
lib/: raygui.h  vec.c  vec.h
public/: style.css
src/: index.ts  main.c  main.h
src/entities/: ant.c  ant.h  food.c  food.h
src/main/: simulation.c  simulation.h
src/neural/: ann.c  ann.h  matrix.c  matrix.h  nn.c  nn.h
src/objects/: ant.ts
src/scenes/: load.ts  main.ts
src/util/: assets.ts  definitions.h  dynarr.h  gui.c  gui.h  manager.ts  physics.ts  util.c  util.h
test/: CMakeLists.txt
test/neural/: nn.c
web/: wasm-shell.html
